Suppress JDK 21 warning about dynamic agent loading