@@ -49,6 +49,7 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 kotlin {
